[gd_scene load_steps=4 format=3 uid="uid://bmdeuffp1eejw"]

[ext_resource type="Script" path="res://Scripts/big_pill.gd" id="1_bgm1t"]
[ext_resource type="Texture2D" uid="uid://dnaq3waacq85h" path="res://Sprites/tiles/floor-tile-pill.svg" id="2_u8msb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a6yyj"]

[node name="BigPill" type="Node2D"]
script = ExtResource("1_bgm1t")

[node name="BigPillSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_u8msb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_a6yyj")

[connection signal="texture_changed" from="BigPillSprite" to="." method="_on_sprite_2d_texture_changed"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
